(Pending testing) Fixed 'outline' element not working on Safari

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,7 +76,7 @@ Section: Navigation (Effects all pages)
     font-family: "Fredoka One", sans-serif;
     
     border: 2px solid #000000;
-    outline: 2px solid #ffffff;
+    box-shadow: 0 0 0 2px #ffffff;
     background-color: #EAA977;
     margin-top: 5px;
     margin-left: 2vw;
@@ -112,8 +112,9 @@ Section: Body (Effects all pages)
 body {
     /*background-color: #6394C5;*/
     background-color: #000;
-    background-image: linear-gradient(#6394C5 0%, #4475a7 400px);
-
+    background-image: linear-gradient(#6394C5 0%, #4475a7 400px); /* W3C */
+    background-image:    -moz-linear-gradient(top, #6394C5 0%, #4475a7 400px); /* FF3.6+ */
+    background-image: -webkit-linear-gradient(top, #6394C5 0%, #4475a7 400px); /* Chrome10+,Safari5.1+ */
     font-family: "Fredoka One", sans-serif;
     padding: 0px;
     margin: 0px;
